tests/reject/closureCaptureThisVtEsc.emojic
🕊 🐟 🍇
  🖍🆕 name 🔡
  🖍🆕 age 🔢

  🆕 🍼 name 🔡 🍼 age 🔢 🍇🍉

  ❗️ 🛍 ➡️ 🍇➡️🔡🍉 🍇
    ↩️ 🍇🛅 ➡️🔡
      ↩️ 🍪 name 🔤 🔤 🔡age 10❗️ 🍪
    🍉
  🍉
🍉

🏁 🍇
  🆕🐟🆕  🔤Shawn🔤 32❗️ ➡️ fish

  😀 ⁉️ 🛍 fish❗️❗️❗
🍉
